2018-09-13  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_debug_macro_section): Use elf_getdata. Print
	decoded flag string.
2018-09-13  Mark Wielaard  <mark@klomp.org>

2018-10-19  Mark Wielaard  <mark@klomp.org>

	* unstrip.c (copy_elided_sections): Renumber group section indexes.

2018-10-12  Mark Wielaard  <mark@klomp.org>

	* strip.c (handle_elf): Don't remove SHF_GROUP flag from sections.
	Skip group section flag when renumbering section indexes.
	* unstrip.c (struct section): Add sig field.
	(compare_unalloc_sections): Take and use sig1 and sig2 as arguments.
	(compare_sections): Pass signatures to compare_unalloc_sections.
	(get_group_sig): New function.
	(find_alloc_sections_prelink): Set signature.
	(copy_elided_sections): Likewise and pass them on.
	(find_unalloc_section): Take and pass signatures.

2018-10-02  Andreas Schwab  <schwab@suse.de>

	* strip.c (handle_elf): Handle ADD/SUB relocation.

2018-09-13  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_shdr): Get number of section with elf_getshdrnum.
	(print_phdr): Likewise.

2018-09-13  Mark Wielaard  <mark@klomp.org>

	* strip.c (handle_elf): Check against shstrndx, not e_shstrndx.
	Explicitly set shdrstrndx for debug file.
	* unstrip.c (copy_elf): Explicitly copy shstrndx.
	(find_alloc_sections_prelink): Document shnum usage.

2018-09-13  Mark Wielaard  <mark@klomp.org>

	* elflint.c (check_elf_header): Use shnum instead of e_shnum for all
	checks.
	(check_symtab): Use shstrndx instead of e_shstrndx to get section
	names.

2018-09-13  Mark Wielaard  <mark@klomp.org>

	* elfcmp.c (main): Get, check and shdrstrndx for section names.

2018-09-12  Mark Wielaard  <mark@klomp.org>

	* elfcmp.c (main): Call ebl_section_strip_p without ehdr.
	* strip.c (handle_elf): Likewise.

2018-09-12  Mark Wielaard  <mark@klomp.org>

	* elflint.c (check_symtab): Call ebl_check_special_symbol without
	ehdr.

2018-07-30  Mark Wielaard  <mark@klomp.org>
